--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="General Tutorial">
   <meta name="author" content="Adam Sawicki">
 
-  <link rel="stylesheet" href="style.css?v=1.0">
+  <link rel="stylesheet" href="/static/style.css?v=1.0">
 
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -19,6 +19,6 @@
   General Tutorial
   <div id="root"></div> 
 
-  <script src="script.js"></script>
+  <script src="/static/script.js"></script>
 </body>
 </html>
