Display first user name letter as a default avatar

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>General Tutorial</title>
+  <title>QuickNote</title>
   <meta name="description" content="General Tutorial">
   <meta name="author" content="Adam Sawicki">
 
