--- a/src/index.html
+++ b/src/index.html
@@ -3,21 +3,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-
   <title>QuickNote</title>
-  <meta name="description" content="General Tutorial">
+  <meta name="description" content="Quick Note">
   <meta name="author" content="Adam Sawicki">
-
-  <link rel="stylesheet" href="/style.css?v=1.0">
-
-  <!--[if lt IE 9]>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
-  <![endif]-->
 </head>
 
 <body>
   <div id="app"></div> 
-
-  <script src="/script.js"></script>
 </body>
 </html>
